# Generated by Django 5.2.10 on 2026-01-18 06:03
"""Initial schema for assessments and question models."""

import django.contrib.postgres.fields
import django.db.models.deletion
from django.conf import settings
from django.db import migrations, models


class Migration(migrations.Migration):
    """Create initial assessment-related tables."""

    initial = True

    dependencies = [
        migrations.swappable_dependency(settings.AUTH_USER_MODEL),
    ]

    operations = [
        migrations.CreateModel(
            name="Question",
            fields=[
                (
                    "id",
                    models.BigAutoField(
                        auto_created=True, primary_key=True, serialize=False, verbose_name="ID"
                    ),
                ),
                ("question_type", models.CharField(max_length=31)),
                (
                    "kind",
                    models.CharField(
                        choices=[
                            ("MULTIPLE_CHOICE", "Multiple Choice"),
                            ("SHORT_ANSWER", "Short Answer"),
                            ("NUMBER_SCALE", "Number Scale"),
                            ("MOOD_METER", "Mood Meter"),
                        ],
                        db_column="type",
                        max_length=255,
                    ),
                ),
                ("prompt", models.TextField()),
                ("max_points", models.FloatField()),
                ("auto_gradable", models.BooleanField(default=False)),
                ("graded", models.BooleanField(default=False)),
                ("image", models.TextField(blank=True, null=True)),
            ],
            options={
                "db_table": "questions",
            },
        ),
        migrations.CreateModel(
            name="Assessment",
            fields=[
                (
                    "id",
                    models.BigAutoField(
                        auto_created=True, primary_key=True, serialize=False, verbose_name="ID"
                    ),
                ),
                ("title", models.CharField(max_length=255)),
                ("category", models.CharField(blank=True, max_length=255, null=True)),
                (
                    "grading_mode",
                    models.CharField(
                        choices=[
                            ("AUTO", "Auto"),
                            ("MANUAL", "Manual"),
                            ("HYBRID", "Hybrid"),
                            ("RUBRIC", "Rubric"),
                            ("REFLECTION", "Reflection"),
                            ("MOOD_METER", "Mood Meter"),
                        ],
                        max_length=255,
                    ),
                ),
                (
                    "rubric_assessment_ids",
                    django.contrib.postgres.fields.ArrayField(
                        base_field=models.BigIntegerField(),
                        blank=True,
                        default=list,
                        null=True,
                        size=None,
                    ),
                ),
                (
                    "created_by_admin",
                    models.ForeignKey(
                        db_column="created_by_admin_id",
                        on_delete=django.db.models.deletion.PROTECT,
                        to=settings.AUTH_USER_MODEL,
                    ),
                ),
                (
                    "rubric",
                    models.ForeignKey(
                        blank=True,
                        db_column="rubric_id",
                        null=True,
                        on_delete=django.db.models.deletion.SET_NULL,
                        related_name="rubric_children",
                        to="assessments.assessment",
                    ),
                ),
            ],
            options={
                "db_table": "assessments",
            },
        ),
        migrations.CreateModel(
            name="MoodMeterQuestion",
            fields=[
                (
                    "question",
                    models.OneToOneField(
                        db_column="id",
                        on_delete=django.db.models.deletion.CASCADE,
                        primary_key=True,
                        related_name="mood_meter",
                        serialize=False,
                        to="assessments.question",
                    ),
                ),
            ],
            options={
                "db_table": "mood_meter_question",
            },
        ),
        migrations.CreateModel(
            name="MultipleChoiceQuestion",
            fields=[
                (
                    "question",
                    models.OneToOneField(
                        db_column="id",
                        on_delete=django.db.models.deletion.CASCADE,
                        primary_key=True,
                        related_name="multiple_choice",
                        serialize=False,
                        to="assessments.question",
                    ),
                ),
                ("select_all", models.BooleanField(default=False)),
            ],
            options={
                "db_table": "multiple_choice_question",
            },
        ),
        migrations.CreateModel(
            name="NumberScaleQuestion",
            fields=[
                (
                    "question",
                    models.OneToOneField(
                        db_column="id",
                        on_delete=django.db.models.deletion.CASCADE,
                        primary_key=True,
                        related_name="number_scale",
                        serialize=False,
                        to="assessments.question",
                    ),
                ),
                ("min", models.IntegerField()),
                ("max", models.IntegerField()),
                ("target", models.IntegerField(blank=True, null=True)),
            ],
            options={
                "db_table": "number_scale_question",
            },
        ),
        migrations.CreateModel(
            name="ShortAnswerQuestion",
            fields=[
                (
                    "question",
                    models.OneToOneField(
                        db_column="id",
                        on_delete=django.db.models.deletion.CASCADE,
                        primary_key=True,
                        related_name="short_answer",
                        serialize=False,
                        to="assessments.question",
                    ),
                ),
                ("case_sensitive", models.BooleanField(default=False)),
                ("trim", models.BooleanField(default=True)),
            ],
            options={
                "db_table": "short_answer_question",
            },
        ),
        migrations.AddField(
            model_name="question",
            name="assessment",
            field=models.ForeignKey(
                blank=True,
                db_column="assessment_id",
                null=True,
                on_delete=django.db.models.deletion.SET_NULL,
                related_name="questions",
                to="assessments.assessment",
            ),
        ),
        migrations.CreateModel(
            name="MoodMeterLabel",
            fields=[
                (
                    "id",
                    models.BigAutoField(
                        auto_created=True, primary_key=True, serialize=False, verbose_name="ID"
                    ),
                ),
                ("label", models.CharField(blank=True, max_length=255, null=True)),
                (
                    "question",
                    models.ForeignKey(
                        db_column="question_id",
                        on_delete=django.db.models.deletion.CASCADE,
                        related_name="mood_meter_labels",
                        to="assessments.question",
                    ),
                ),
            ],
            options={
                "db_table": "mood_meter_labels",
            },
        ),
        migrations.CreateModel(
            name="McqCorrectAnswer",
            fields=[
                (
                    "id",
                    models.BigAutoField(
                        auto_created=True, primary_key=True, serialize=False, verbose_name="ID"
                    ),
                ),
                ("correct_index", models.IntegerField()),
                (
                    "question",
                    models.ForeignKey(
                        db_column="question_id",
                        on_delete=django.db.models.deletion.CASCADE,
                        related_name="mcq_correct_answers",
                        to="assessments.question",
                    ),
                ),
            ],
            options={
                "db_table": "mcq_correct_answers",
            },
        ),
        migrations.CreateModel(
            name="McqChoice",
            fields=[
                (
                    "id",
                    models.BigAutoField(
                        auto_created=True, primary_key=True, serialize=False, verbose_name="ID"
                    ),
                ),
                ("choice_text", models.CharField(max_length=255)),
                ("points", models.IntegerField()),
                (
                    "question",
                    models.ForeignKey(
                        db_column="question_id",
                        on_delete=django.db.models.deletion.CASCADE,
                        related_name="mcq_choices",
                        to="assessments.question",
                    ),
                ),
            ],
            options={
                "db_table": "mcq_choices",
            },
        ),
    ]
