@startuml
hide circle
skinparam classAttributeIconSize 0

package "assessments" {
class Assessment <<Model>> {
  +id: BigAutoField
  +title: CharField
  +category: CharField
  +grading_mode: CharField
  +created_by_admin: User
  +rubric: Assessment
  +rubric_assessment_ids: ArrayField
}
class McqChoice <<Model>> {
  +id: BigAutoField
  +question: Question
  +choice_text: CharField
  +points: IntegerField
}
class McqCorrectAnswer <<Model>> {
  +id: BigAutoField
  +question: Question
  +correct_index: IntegerField
}
class MoodMeterLabel <<Model>> {
  +id: BigAutoField
  +question: Question
  +label: CharField
}
class MoodMeterQuestion <<Model>> {
  +question: Question
}
class MultipleChoiceQuestion <<Model>> {
  +question: Question
  +select_all: BooleanField
}
class NumberScaleQuestion <<Model>> {
  +question: Question
  +min: IntegerField
  +max: IntegerField
  +target: IntegerField
}
class Question <<Model>> {
  +id: BigAutoField
  +question_type: CharField
  +kind: CharField
  +assessment: Assessment
  +prompt: TextField
  +max_points: FloatField
  +auto_gradable: BooleanField
  +graded: BooleanField
  +image: TextField
}
class ShortAnswerQuestion <<Model>> {
  +question: Question
  +case_sensitive: BooleanField
  +trim: BooleanField
}
}

Assessment "0..*" -- "1" User : created_by_admin
Assessment "0..*" -- "1" Assessment : rubric
Question "0..*" -- "1" Assessment : assessment
MultipleChoiceQuestion "0..*" -- "1" Question : question
ShortAnswerQuestion "0..*" -- "1" Question : question
NumberScaleQuestion "0..*" -- "1" Question : question
MoodMeterQuestion "0..*" -- "1" Question : question
McqChoice "0..*" -- "1" Question : question
McqCorrectAnswer "0..*" -- "1" Question : question
MoodMeterLabel "0..*" -- "1" Question : question
@enduml
